fixed app link on landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<h1>Strut</h1>
-		<a class="btn btn-large first" href="http://tantaman.github.com/Strut/client/web/index.html">Demo</a><a class="btn btn-large" href="https://github.com/tantaman/Strut">Github</a>
+		<a class="btn btn-large first" href="http://tantaman.github.com/Strut/web/index.html">Demo</a><a class="btn btn-large" href="https://github.com/tantaman/Strut">Github</a>
 	</div>
 </body>
 </html>
