--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="container">
 		<h1>Strut</h1>
+        <p class="description">Presentation editor for <a href="http://bartaz.github.com/impress.js/">Impress.js</a></p>
 		<a class="btn btn-large first" href="http://tantaman.github.com/Strut/web/index.html">Demo</a><a class="btn btn-large" href="https://github.com/tantaman/Strut">Github</a>
 	</div>
 </body>
