--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Strut</h1>
+		<h1><a href="http://tantaman.github.com/Strut/web/index.html">Strut</a></h1>
         <p class="description">Presentation editor for <a href="http://bartaz.github.com/impress.js/">Impress.js</a></p>
 		<a class="btn btn-large first" href="http://tantaman.github.com/Strut/web/index.html">Demo</a><a class="btn btn-large" href="https://github.com/tantaman/Strut">Github</a>
 	</div>
