--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<title>Strut - ALPHA</title>
-	<link rel="stylesheet" href="client/web/res/css/bootstrap.css"></link>
+	<link rel="stylesheet" href="web/res/css/bootstrap.css"></link>
 	<link rel="stylesheet" href="main.css"></link>
 </head>
 <body>
 	<div class="container">
-		<h1><a href="http://tantaman.github.com/Strut/web/index.html">Strut</a></h1>
+		<h1>Strut</h1>
         <p class="description">Presentation editor for <a href="http://bartaz.github.com/impress.js/">Impress.js</a></p>
-		<a class="btn btn-large first" href="http://tantaman.github.com/Strut/web/index.html">Demo</a><a class="btn btn-large" href="https://github.com/tantaman/Strut">Github</a>
+		<a class="btn btn-large first btn-primary" href="http://tantaman.github.com/Strut/web/index.html">Demo</a><a class="btn btn-large" href="https://github.com/tantaman/Strut">Github</a>
 	</div>
 </body>
 </html>
