--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="res/jqplugins/colorpicker/css/colorpicker.css" type="text/css" />
 		<link rel="stylesheet" href="res/jqplugins/gradient_picker/jquery.gradientPicker.css" type="text/css" />
 		<link href='preview_export/css/web-fonts.css' rel='stylesheet' type='text/css'>
+		<link href='res/vendor/etch.css' rel='stylesheet' type='text/css'></link>
 		<script type="text/javascript" src="scripts/vendor/vendor-built.js"></script>
 		<script type="text/javascript" src="res/jqplugins/colorpicker/js/colorpicker.js"></script>
 		<script type="text/javascript" src="res/jqplugins/gradient_picker/jquery.gradientPicker.js"></script>
