add favicons to splash page also

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Strut - ALPHA</title>
 	<link rel="stylesheet" href="web/res/css/bootstrap.css"></link>
 	<link rel="stylesheet" href="main.css"></link>
+	<link rel="shortcut icon" href="web/res/img/strut-icon.png">
+	<link rel="apple-touch-icon-precomposed" href="web/res/img/strut-touch.png">
 </head>
 <body>
 	<div class="container">
