--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<h1><img src="web/res/img/strut-logo-light.png" alt="Strut"/></h1>
         <p class="description">Presentation editor for <a href="http://bartaz.github.com/impress.js/">Impress.js</a></p>
-		<a class="btn btn-large first btn-danger" href="http://tantaman.github.com/Strut/web/index.html">Demo</a><a class="btn btn-large btn-inverse" href="https://github.com/tantaman/Strut">Github</a>
+		<a class="btn btn-large first btn-danger" href="http://tantaman.github.com/Strut/web-dist/index.html">Demo</a><a class="btn btn-large btn-inverse" href="https://github.com/tantaman/Strut">Github</a>
 	</div>
 </body>
 </html>
