Fixed strut landing page

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<title>Strut - ALPHA</title>
-	<link rel="stylesheet" href="web/res/css/bootstrap.css"></link>
+	<link rel="stylesheet" href="app/components/bootstrap/css/bootstrap.css"></link>
 	<link rel="stylesheet" href="main.css"></link>
 	<link rel="shortcut icon" href="web/res/img/strut-icon.png">
 	<link rel="apple-touch-icon-precomposed" href="web/res/img/strut-touch.png">
 </head>
 <body>
 	<div class="container">
-		<h1><img src="web/res/img/strut-logo-light.png" alt="Strut"/></h1>
+		<h1><img src="app/img/strut-logo-light.png" alt="Strut"/></h1>
         <p class="description">Presentation editor for <a href="http://bartaz.github.com/impress.js/">Impress.js</a></p>
-		<a class="btn btn-large first btn-danger" href="http://tantaman.github.com/Strut/web-dist/index.html">Demo</a><a class="btn btn-large btn-inverse" href="https://github.com/tantaman/Strut">Github</a>
+		<a class="btn btn-large first btn-danger" href="http://tantaman.github.com/Strut/dist/index.html">Demo</a><a class="btn btn-large btn-inverse" href="https://github.com/tantaman/Strut">Github</a>
 	</div>
 </body>
 </html>
